@@ -47,7 +47,11 @@ checkFrameworks();
 # Set paths according to the build system used
 if (isQt()) {
     my $libDir = catdir(productDir(), 'lib');
-    $launcherPath = catdir($launcherPath, "bin", "QtTestBrowser");
+    if (isWK2()) {
+        $launcherPath = catdir($launcherPath, "bin", "MiniBrowser");
+    } else {
+        $launcherPath = catdir($launcherPath, "bin", "QtTestBrowser");
+    }
 
     $ENV{QTWEBKIT_PLUGIN_PATH} = catdir($libDir, 'plugins');
 
