@@ -1,3 +1,14 @@
+2011-02-24  Chang Shu  <cshu@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Launch MiniBrowser if the test run is WebKit2. 
+        https://bugs.webkit.org/show_bug.cgi?id=55145
+
+        * Scripts/old-run-webkit-tests:
+        * Scripts/run-launcher:
+        * Scripts/webkitdirs.pm:
+
 2011-02-24  Victoria Kirst  <vrk@google.com>
 
         Reviewed by Mihai Parparita.
